--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,21 +1,22 @@
-#Mon Mar 02 08:26:33 IST 2015
-base.iphone=3449151524
-base.android=961615611
-jsonstore.windowsphone8=98066318
+#Mon Jul 20 13:38:34 IDT 2015
+base.iphone=2678403229
+base.android=4075754651
+jsonstore.windowsphone8=3392042448
 AdapterMashup.iphone.native=1403769466
-common.android=3951631686
-fipshttp.android=3456286054
-wl_version=7.0.0.00.20150227-0916
+common.android=3998981046
+fipshttp.android=3517017756
+wl_version=7.1.0.00.20150720-0602
 eclipse.preferences.version=1
-base.windowsphone8=2414973466
+base.windowsphone8=2993049421
 jsonstore.android=2033967206
 analytics.ipad=2554529831
 encoding//apps/AdapterMashup/common/index.html=ISO-8859-1
-fipshttp.iphone=1503308747
-fipshttp.ipad=1503308747
+fipshttp.iphone=2487189175
+fipshttp.ipad=2487189175
+wl_compatible_version=
 encoding//apps/AdapterMashup/common/css/main.css=UTF-8
 AdapterMashup.android.native=4190508318
-base.ipad=3449151524
+base.ipad=2678403229
 encoding//apps/AdapterMashup/common/js/main.js=UTF-8
 AdapterMashup.ipad.native=1403769466
 encoding//apps/AdapterMashup/iphone/css/main.css=UTF-8
