Add Java2JS adapters call option + Java2Java adapters call option

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="con" path="com.worklight.studio.plugin.classpath.SERVER_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="server/java"/>
+	<classpathentry kind="src" output="adapters/getCitiesListJS/bin" path="adapters/getCitiesListJS/src"/>
+	<classpathentry kind="src" output="adapters/getCitiesListJavaToJs/bin" path="adapters/getCitiesListJavaToJs/src"/>
+	<classpathentry kind="src" output="adapters/getCitiesListJava/bin" path="adapters/getCitiesListJava/src"/>
+	<classpathentry kind="src" output="adapters/getCityWeatherJava/bin" path="adapters/getCityWeatherJava/src"/>
+	<classpathentry kind="lib" path="server/lib/mysql-connector-java-5.1.6.jar" rootpath="/"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
